Removed typo in footnote.

--- a/src/primer.tex
+++ b/src/primer.tex
@@ -150,7 +150,7 @@ college transcripts,
 patent filings,
 land ownership transactions,
 art ownership transactions\footnote{BigchainDB
-began as a project within within ascribe.io,
+began as a project within ascribe.io,
 which offers a service to record art attribution, transfer,
 consignment and loan records on the Bitcoin blockchain.},
 supply-chain records,
